# course_work_3

./: README.md  pyproject.toml
json_data/: test.json
src/: develop.py
tests/: conftest.py  test_utils.py
utils/: utils.py
