[tool.poetry]
name = "Course_work_3"
version = "0.1.0"
description = ""
authors = ["tamir <tamirmandreev@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
